Made use of Optional